    was caused by a known STL bug in VC++ 6. 
    See http://www.dinkumware.com/vc_fixes.html <xtree> issue with shared
    std::map in dll. As a work-around the map has been replaced by a vector.

  * src/DllPlugInTester/*.cpp: bug #941625, string literal using char *
    instead of const char *. Patch contributed by Curt Arnold has been
    applied.

2004-06-17 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/Portability.h:
  * include/cppunit/plugin/TestPlugIn.h: fixed report compilation issue 
    with mingw & cygwin. WIN32 is now always defined if _WIN32 is defined.
    Bug #945737 & #930338.

  * doc/Makefile.am: fixed bug #940650 => cp -dpR, removed option -p since
    there is no link to preserve anyway (does not exist on SunOs).

  * src/cppunit/TestPath.cpp: bug #938753, array bound read in 
    splitPathString() with substr if an empty string is passed.

  * src/*/*.dsp: bug #933154, post build fail in directory with spaces.


2004-06-16 Baptiste Lepilleur <gaiacrtn@free.fr>

  * release 1.10.0

  * install-UNIX.txt: added some notes concerning Sun CC 5.5 & AIX.

  * examples/*/*.dsp: fixed project settings (rtti not enabled).

2004-03-13 Baptiste Lepilleur <gaiacrtn@free.fr>

  * release 1.9.14

2004-03-13 Baptiste Lepilleur <gaiacrtn@free.fr>

  * cppunit-config.in: bug #903363, missing -ldl from the output of
    cppunit-config --libs. Fixed thanks Eric Blossom patch.

  * examples/qt/Main.cpp:
  * examples/qt/ExampleTestCase.h: fixed bug #789672: QT example should 
    use CPPUNIT_NS macro.

  * src/cppunit/UnixDynamicLibraryManager.cpp: applied patch #816563
    from Gareth Sylvester. Adding RTLD_GLOBAL allows test plug-ins 
    to provide symbols to shared objects they load themselves.

  * examples/cppunittest/TestAssertTest.h:
  * examples/cppunittest/TestAssertTest.cpp:
  * examples/cppunittest/XmlUniformiserTest.h:
  * examples/cppunittest/XmlUniformiserTest.cpp:
  * include/cppunit/TestAssert.h: add the exception assertion macros