@@ -63,21 +63,13 @@ BOOL TestPlugInRunnerApp::InitInstance()
 
   SetRegistryKey(_T("CppUnit Test Plug-In Runner"));
 
+  {
   TestPlugInRunnerModel model;
 	TestPlugInRunnerDlg dlg( &model );
 	m_pMainWnd = &dlg;
-	int nResponse = dlg.DoModal();
-	if (nResponse == IDOK)
-	{
-		// TODO: Place code here to handle when the dialog is
-		//  dismissed with OK
-	}
-	else if (nResponse == IDCANCEL)
-	{
-		// TODO: Place code here to handle when the dialog is
-		//  dismissed with Cancel
-	}
+	dlg.DoModal();
 
+  }
 	// Since the dialog has been closed, return FALSE so that we exit the
 	//  application, rather than start the application's message pump.
 	return FALSE;
